news detail and news list plus added news article

--- a/templates/base.html
+++ b/templates/base.html
@@ -75,7 +75,7 @@
             <nav>
                 <ul class="nav-links list-unstyled d-flex justify-content-center">
                     <li><a href="{% url 'home' %}" class="text-white">Home</a></li>
-                    <li><a href="#news" class="text-white">News</a></li>
+                    <li><a href="{% url 'news_list' %}" class="text-white">News</a></li>
                     <li><a href="#politics" class="text-white">Politics</a></li>
                     <li><a href="#election" class="text-white">Election</a></li>
                     <li><a href="#entertainment" class="text-white">Entertainment</a></li>
