--- a/templates/news_detail.html
+++ b/templates/news_detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 
 {% block title %}{{ news.title }}{% endblock title %}
 
@@ -47,7 +48,7 @@
             {% for comment in news.comment_set.all %}
             <div class="card mb-3">
                 <div class="card-body">
-                    <strong>{{ comment.author.username }}</strong> &middot; <small class="text-muted">
+                    <strong>{{ comment.profile_name }}</strong> &middot; <small class="text-muted">
                         {{comment.created_at|date:"F j, Y, g:i a" }}</small>
                     <p class="mt-2">{{ comment.comment }}</p>
                 </div>
@@ -66,7 +67,7 @@
             <form action="" method="post">
                 {% csrf_token %}
                 <div class="form-group">
-                    {{ form.comment.as_p }}
+                    {{ form|crispy }}
                 </div>
                 <button type="submit" class="btn btn-primary">Submit Comment</button>
             </form>
