added politics list view

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,6 @@
     <h1 class="display-4">Welcome to Our News Channel</h1>
     <p class="lead">Stay updated with the latest news from around the world, covering politics, sports, health, and much
         more.</p>
-    <a href="#news" class="btn btn-primary btn-lg" role="button">Explore News</a>
+    <a href="{% url 'news_list' %}" class="btn btn-primary btn-lg" role="button">Explore News</a>
 </div>
 {% endblock content %}
