--- a/templates/base.html
+++ b/templates/base.html
@@ -76,7 +76,7 @@
                 <ul class="nav-links list-unstyled d-flex justify-content-center">
                     <li><a href="{% url 'home' %}" class="text-white">Home</a></li>
                     <li><a href="{% url 'news_list' %}" class="text-white">News</a></li>
-                    <li><a href="#politics" class="text-white">Politics</a></li>
+                    <li><a href="{% url 'politics_list' %}" class="text-white">Politics</a></li>
                     <li><a href="#election" class="text-white">Election</a></li>
                     <li><a href="#entertainment" class="text-white">Entertainment</a></li>
                     <li><a href="#sports" class="text-white">Sports</a></li>
