added all header links templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -77,12 +77,12 @@
                     <li><a href="{% url 'home' %}" class="text-white">Home</a></li>
                     <li><a href="{% url 'news_list' %}" class="text-white">News</a></li>
                     <li><a href="{% url 'politics_list' %}" class="text-white">Politics</a></li>
-                    <li><a href="#election" class="text-white">Election</a></li>
-                    <li><a href="#entertainment" class="text-white">Entertainment</a></li>
-                    <li><a href="#sports" class="text-white">Sports</a></li>
-                    <li><a href="#health" class="text-white">Health</a></li>
-                    <li><a href="#business" class="text-white">Business</a></li>
-                    <li><a href="#live-tv" class="text-white">Live TV/Radio</a></li>
+                    <li><a href="{% url 'election_list' %}" class="text-white">Election</a></li>
+                    <li><a href="{% url 'entertainment_list' %}" class="text-white">Entertainment</a></li>
+                    <li><a href="{% url 'sports_list' %}" class="text-white">Sports</a></li>
+                    <li><a href="{% url 'health_list' %}" class="text-white">Health</a></li>
+                    <li><a href="{% url 'business_list' %}" class="text-white">Business</a></li>
+                    <li><a href="{% url 'live' %}" class="text-white">Live TV/Radio</a></li>
                 </ul>
             </nav>
         </div>
